# k8s-llm-job

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  gaps.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py
backend/app/: chat.py  chat_context.py  config.py  jobs.py  k8s_jobs.py  kserve_smoke.py  llm.py  local_jobs.py  main.py  metrics.py  routing.py  schemas.py  storage.py  uploads.py
backend/tests/: fakes.py  test_app.py  test_chat_context.py  test_chat_session.py  test_config.py  test_jobs.py  test_jobs_list.py  test_k8s_jobs.py  test_kserve_smoke.py  test_llm.py  test_repo_contracts.py  test_routing.py  test_storage.py  test_upload.py
deploy/app/: backend-deploy.yaml  backend-rbac.yaml  job-template-pdf.yaml  job-template-tabular.yaml  minio.yaml
deploy/kind/: cluster.yaml
deploy/kserve/: inferenceservice.yaml  install.sh  smoke-inferenceservice.yaml  vllm-runtime.yaml
deploy/observability/: grafana-dashboard.json  prometheus.yaml
docs/: architecture.mmd  benchmark.md  demo-script.md  design-notes.md
examples/: sample.csv
scripts/: demo.ps1  demo.sh  down.ps1  down.sh  e2e_kserve_smoke.py  load-test.ps1  load-test.sh  load_test.py  test-upload.csv  test_context_injection.py  up.ps1  up.sh
workers/: __init__.py
workers/pdf/: Dockerfile  __init__.py  main.py  worker.py
workers/shared/: __init__.py  llm.py  storage.py
workers/tabular/: Dockerfile  __init__.py  main.py  worker.py
workers/tests/: test_pdf_worker.py  test_shared.py  (+1 more)
(+6 files in other folders)
