[project]
name = "cern-ml-demo"
version = "0.1.0"
description = "CERN-oriented ML platform demo with FastAPI, Kubernetes Jobs, MinIO, and KServe/vLLM."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.96",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "kubernetes-asyncio>=35.0.1",
    "polars>=1.40.1",
    "pydantic-ai>=1.87.0",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.42.96",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "workers/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
include = ["backend", "workers"]
exclude = [".venv", ".git", "__pycache__"]
typeCheckingMode = "strict"
